# research-paper-fb

./: .gitignore  .mise.toml  PLAN.md  README.md  UBIQUITOUS_LANGUAGE.md  pyproject.toml  review-template.txt  review-template2.txt
config/: axes.yaml  default.yaml
data/: acm_ccs.json  finnish_names.json
docs/superpowers/discussions/: 2026-04-27-classification-tool-and-data-representation.md  2026-04-28-classification-budget-pressure.md
docs/superpowers/plans/: 2026-04-24-research-paper-feedback-system.md  2026-04-28-classification-tool-protocol.md  2026-04-28-judge-harness.md  2026-04-29-ag2-refactor.md
docs/superpowers/specs/: 2026-04-24-research-paper-feedback-system-design.md  2026-04-27-classification-tool-protocol-design.md  2026-04-27-merged-review-template-design.md  (+2 more)
paperfb/: __main__.py  config.py  contracts.py  handoffs.py  llm_client.py  logging_hook.py  main.py  orchestrator.py  pipeline.py  renderer.py  schemas.py
paperfb/agents/: classification.py  profile_creation.py  reviewer.py
paperfb/tools/: acm_lookup.py  sampler.py
papers/: Crepe_paper.md
scripts/: build_acm_ccs.py  build_finnish_names.py  judge.py  probe_ag2_api.py  probe_proxy_structured.py
tests/: test_acceptance_live.py  test_build_acm_ccs.py  test_build_finnish_names.py  test_config.py  test_contracts.py  test_handoffs.py  test_judge.py  test_llm_client.py  test_logging_hook.py  test_main.py  test_orchestrator.py  test_pipeline.py  test_renderer.py  test_schemas.py
tests/fixtures/: ccs_sample.xml  tiny_manuscript.md
tests/tools/: test_acm_lookup.py  test_sampler.py
(+22 files in other folders)
