[project]
name = "research-paper-feedback"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.50.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
paperfb = "paperfb.main:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: tests that hit the live proxy (excluded by default, run with -m slow)",
]
addopts = "-m 'not slow'"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["paperfb*"]
